--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background: rgba(255,255,255,0.9);
+  background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid rgba(0,0,0,0.1);
+  border-bottom: 1px solid rgba(125, 22, 181, 0.1);
   z-index: 1000;
 }
 
@@ -50,7 +50,8 @@ body {
   height:64px; align-items:center;
 }
 .nav-links a {
-  color: #1d1d1f;
+  color: #000000;
+  border-radius: 40%;
   text-decoration: none;
   font-size: 12px;
   font-weight: 400;
@@ -125,7 +126,7 @@ body {
   font-size: 14px;
   cursor: pointer;
 }
-.search-suggestions li:hover { background: #f0f0f0; }
+.search-suggestions li:hover { background: hsl(269, 88%, 73%); border-radius: 8px; }
 
 /* ——— LAYOUT PAGES ——— */
 .main-content { margin-top: 64px; min-height: calc(100vh - 64px); }
@@ -133,9 +134,9 @@ body {
 .page.active { display: block; }
 
 /* ——— HERO (Home) ——— */
-.hero-section { position: relative; text-align: center; padding: 80px 22px 100px; background: #fff; }
-.hero-banner { max-width: 10%; height: auto; display: block; margin: 0 auto 10px; }
-.hero-subtitle { font-size: 28px; font-weight: 400; color: #6e6e73; margin-bottom: 48px; margin-top: 100px; }
+.hero-section { position: relative; text-align: center; padding: 30px 22px 100px; background: #fff; }
+.hero-banner { max-width: 30%; height: auto; display: block; margin: 0 auto 10px; }
+.hero-subtitle { font-size: 28px; font-weight: 400; color: #6e6e73; margin-bottom: 20px; margin-top: 20px; }
 .video-container { max-width: 980px; margin: 0 auto 60px; padding: 0 40px; display: flex; flex-direction: column; align-items: center; }
 .promo-video { width: 100%; height: 400px; object-fit: cover; border-radius: 12px; background: #000; }
 
@@ -150,7 +151,7 @@ body {
 .hover-popup { position: absolute; top: 0; left: 50%; transform: translateX(-50%) translateY(-110%); background: rgba(0,0,0,0.8); color: #fff; padding: 10px 20px; border-radius: 8px; font-size: 14px; white-space: nowrap; opacity: 0; visibility: hidden; transition: .3s; z-index: 10; }
 .product-card:hover .hover-popup { opacity: 1; visibility: visible; transform: translateX(-50%) translateY(-130%); }
 
-.join-button { background: #570ba7; color: #fff; border: none; padding: 12px 24px; border-radius: 980px; font-size: 16px; font-weight: 500; cursor: pointer; }
+.join-button { background: #570ba7; color: #fff; border: none; padding: 12px 24px; border-radius: 980px; font-size: 16px; font-weight: 500; cursor: pointer; margin-bottom: 20px;}
 .join-button:hover { background: #7217d4; }
 
 /* ——— ACCESSORIES PAGE ——— */
@@ -175,38 +176,61 @@ body {
   .logo-img { max-height: 40px; }
 
   /* mostra hamburger */
-  .mobile-menu-toggle { display: block; }
+  .mobile-menu-toggle { display: block; margin-bottom: 7px; }
 
   /* i link diventano menu a scomparsa dentro la navbar */
   .nav-links {
-    position: absolute;   /* esce dal flow per non spingere gli altri elementi */
+    transform: none;
+    z-index: 1001;;
+    position:absolute;  /* esce dal flow per non spingere gli altri elementi */
     top: 64px;            /* subito sotto la barra */
     left: 0;
     width: 100%;
-    flex-direction: column;
+    height: 40px;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: flex-start;
-    gap: 0;
-    background: rgba(255,255,255,0.96);
+    gap: 10px;
     backdrop-filter: blur(20px);
     overflow: hidden;
-    max-height: 0;
     opacity: 0;
     border-bottom: 1px solid rgba(0,0,0,0.1);
-    transition: max-height .4s ease, opacity .3s ease;
+    transition: max-height .9s ease, opacity .9s ease;
   }
   .nav-links.mobile-open {
-    max-height: 260px;   /* altezza sufficiente per 3 voci */
-    opacity: 1;
+    max-height: 200px;   /* altezza sufficiente per 3 voci */
+    opacity: 0.8;
+    background-color: #7217d4;
+    border-bottom: 3px groove #570ba7; 
+    border-bottom-style: groove;/* linea di separazione */
   }
 
   /* link stile mobile */
   .nav-links a {
     width: 100%;
-    padding: 16px 24px;
-    font-size: 16px;
-    text-align: left;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    border-radius:8px;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+    background: #ccc;
+    transition: background .9s;
+    opacity: 0.8;
+    color: #000000;
+    margin-top: 10px;
+  }
+  .nav-links a:hover,
+  .nav-links a.active {
+    background: #570ba7;
+    color: #ffffff;
+    border: radius 8px;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
   }
 
+  
   /* rimuove spazio centrale inutile */
   .nav-center { display: none; }
 
@@ -219,6 +243,7 @@ body {
   .featured-products { flex-direction: column; align-items: center; gap: 20px; }
   .product-card { width: 100%; max-width: 300px; }
   .accessories-grid { grid-template-columns: 1fr; padding: 60px 16px; }
+  .hero-banner { max-width: 80%; height: auto; margin-bottom: 20px; }
   .metaverse-content { padding: 60px 16px; }
   .hero-subtitle { font-size: 22px; }
   .section-title { font-size: 36px; }
@@ -238,7 +263,7 @@ body {
 
     <!-- Nav links (centrate desktop / dropdown mobile) -->
     <ul class="nav-links" id="navLinks">
-      <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
+      <ul><a href="#" class="nav-link active" data-page="home">Home</a></ul>
       <li><a href="#" class="nav-link" data-page="accessori">Accessories</a></li>
       <li><a href="#" class="nav-link" data-page="metaverso">Metaverse</a></li>
     </ul>
@@ -262,6 +287,7 @@ body {
     <section class="hero-section">
       <img src="img/logo_Home.png" alt="" class="hero-banner">
       <h1 class="hero-subtitle">Explore a new universe of possibilities</h1>
+      <button class="join-button" onclick="openJoin()">Join Us</button>
       <div class="video-container">
         <video class="promo-video" controls autoplay muted loop>
           <source src="short.mp4" type="video/mp4">
@@ -284,7 +310,7 @@ body {
           <div class="hover-popup">Sensory Suit</div>
         </div>
       </div>
-      <button class="join-button" onclick="openJoin()">Join Us</button>
+      
     </section>
   </div>
 
