--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 .hero-section { position: relative; text-align: center; padding: 30px 22px 100px; background: #fff; }
 .hero-banner { max-width: 30%; height: auto; display: block; margin: 0 auto 10px; }
 .hero-subtitle { font-size: 28px; font-weight: 400; color: #6e6e73; margin-bottom: 20px; margin-top: 20px; }
-.video-container { max-width: 980px; margin: 0 auto 60px; padding: 0 40px; display: flex; flex-direction: column; align-items: center; }
+.video-container { max-width: 480px; max-height: 608px; margin: 0 auto 60px; padding: 0 40px; display: flex; flex-direction: column; align-items: center; }
 .promo-video { width: 100%; height: 400px; object-fit: cover; border-radius: 12px; background: #000; }
 
 .featured-products { display: flex; justify-content: center; gap: 40px; margin-bottom: 60px; padding: 0 22px; }
@@ -181,53 +181,48 @@ body {
   /* i link diventano menu a scomparsa dentro la navbar */
   .nav-links {
     transform: none;
-    z-index: 1001;;
     position:absolute;  /* esce dal flow per non spingere gli altri elementi */
     top: 64px;            /* subito sotto la barra */
-    left: 0;
-    width: 100%;
-    height: 40px;
-    flex-direction: row;
+    left: 5px;
+    width:100%;
+    height: 135px;
+    flex-direction:row;
     justify-content: space-between;
     align-items: flex-start;
     gap: 10px;
-    backdrop-filter: blur(20px);
     overflow: hidden;
     opacity: 0;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    transition: max-height .9s ease, opacity .9s ease;
+    border-radius: 8px;
   }
-  .nav-links.mobile-open {
-    max-height: 200px;   /* altezza sufficiente per 3 voci */
-    opacity: 0.8;
-    background-color: #7217d4;
-    border-bottom: 3px groove #570ba7; 
-    border-bottom-style: groove;/* linea di separazione */
+  .nav-links.mobile-open { /* altezza sufficiente per 3 voci */
+    opacity: 0.9;
+    background-color: transparent;
+    margin-top: 5px;
   }
 
   /* link stile mobile */
   .nav-links a {
     width: 100%;
-    padding: 10px 20px;
-    font-size: 20px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    align-items: center;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+
+    padding: 5px 18px;
+    font-size: 15px;
     text-align: center;
     border-radius:8px;
-    border-top-right-radius: 16px;
-    border-top-left-radius: 16px;
     background: #ccc;
     transition: background .9s;
-    opacity: 0.8;
+    opacity: 1;
     color: #000000;
-    margin-top: 10px;
+    margin-top: 1px;
   }
   .nav-links a:hover,
   .nav-links a.active {
     background: #570ba7;
     color: #ffffff;
     border: radius 8px;
-    border-top-right-radius: 16px;
-    border-top-left-radius: 16px;
   }
 
   
@@ -387,7 +382,7 @@ function toggleMobileMenu() {
 }
 
 function openJoin() {
-  window.open('https://www.example.com/join', '_blank');
+  window.open('https://www.apple.com', '_blank');
 }
 
 // Search functionality
@@ -404,9 +399,9 @@ function suggestProducts() {
   const term = searchInput.value.toLowerCase();
   suggestionsList.innerHTML = '';
   if (!term) return;
-  const matches = ['Visore VR Premium','Controller Aptici','Tuta Sensoriale'].filter(p => p.toLowerCase().includes(term));
+  const matches = ['Vision VR','Haptic Controllers','Sensory Suit'].filter(p => p.toLowerCase().includes(term));
   if (matches.length === 0) {
-    suggestionsList.innerHTML = '<li>Nessun prodotto trovato</li>';
+    suggestionsList.innerHTML = '<li>No Products Found</li>';
     return;
   }
   matches.forEach(m => {
