--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ function toggleMobileMenu() {
 }
 
 function openJoin() {
-  window.open('https://www.apple.com', '_blank');
+  window.open('https://forms.gle/aPpJyP5b6jkgbkiA8', '_blank');
 }
 
 // Search functionality
