--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body {
   <div class="page active" id="home">
     <section class="hero-section">
       <img src="img/logo_Home.png" alt="" class="hero-banner">
-      <h1 class="hero-subtitle">Explore a new universe of possibilities</h1>
+      <h1 class="hero-subtitle">Win a 7-day free trial of the Otherworld VR headset and get exclusive beta access to the Metaverse. All accessories included. Enter now and be among the first to explore Otherworld.</h1>
       <button class="join-button" onclick="openJoin()">Join Us</button>
       <div class="video-container">
         <video class="promo-video" controls autoplay muted loop>
