--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ body {
       <h1 class="hero-subtitle">and get exclusive beta access to the Metaverse.</h1>
       <h2 class="hero-subtitle">All accessories included.</h2>
       <h3 class="hero-subtitle">Enter now and be among the first to explore Otherworld.</h3>
-      <button class="join-button" onclick="openJoin()">Join The Content</button>
+      <button class="join-button" onclick="openJoin()">Join The Contest</button>
       <div class="video-container">
         <video class="promo-video" controls autoplay muted loop>
           <source src="short.mp4" type="video/mp4">
