--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body {
 .product-image { width: 120px; height: 120px; margin: 0 auto 20px; border-radius: 50%; overflow: hidden; background: linear-gradient(135deg,#f5f5f7,#e8e8ed); display: flex; align-items: center; justify-content: center; transition: transform .3s; }
 .product-image img { width: 100%; height: 100%; object-fit: cover; }
 .product-card:hover .product-image { transform: scale(1.1); }
-.product-name { font-size: 18px; font-weight: 600; color: #1d1d1f; margin-bottom: 8px; }
+.product-name { font-size: 18px; font-weight: 600; color: #ffffff; margin-bottom: 8px; }
 
 .hover-popup { position: absolute; top: 0; left: 50%; transform: translateX(-50%) translateY(-110%); background: rgba(0,0,0,0.8); color: #fff; padding: 10px 20px; border-radius: 8px; font-size: 14px; white-space: nowrap; opacity: 0; visibility: hidden; transition: .3s; z-index: 10; }
 .product-card:hover .hover-popup { opacity: 1; visibility: visible; transform: translateX(-50%) translateY(-130%); }
@@ -160,7 +160,7 @@ body {
 .accessories-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));margin-bottom: -10px; gap: 40px; padding: 0px 22px; max-width: 1024px; margin: 0 auto; }
 .accessory-card { animation: rainbow 10s linear infinite; border-radius: 18px; padding: 40px; text-align: center; border: 1px solid rgba(0,0,0,0.1); transition: .3s; }
 .accessory-card:hover { transform: translateY(-8px); border-color: rgba(0,0,0,0.2); }
-.accessory-title { font-size: 24px; font-weight: 600; margin-bottom: 16px; }
+.accessory-title { font-size: 24px; font-weight: 600; margin-bottom: 16px; color: white;}
 .accessory-description { animation: text-colore 10s linear infinite; margin-bottom: 24px; }
 .accessory-price { font-size: 20px; font-weight: 600; color: #0071e3; margin-bottom: 24px; }
 .buy-button { background: #570ba7; color: #fff; border: none; padding: 12px 24px; border-radius: 980px; font-size: 14px; font-weight: 500; cursor: pointer; }
@@ -175,31 +175,31 @@ body {
 .metaverse-section h5 { font-size: 14px; font-weight: 400;  margin-bottom: 16px; text-align: center; animation: text-colore 10s linear infinite;}
 .metaverse-section p { font-size: 16px; line-height: 1.6;  margin-bottom: 16px; text-align: justify;animation: text-colore 10s linear infinite; }
 @keyframes rainbow {
-  0%   { background-color: rgb(170, 50, 234); }
-  16%  { background-color: rgb(214, 90, 255); }
-  33%  { background-color: rgb(170, 50, 234); }
-  50%  { background-color: rgb(214, 90, 255); }
-  66%  { background-color: rgb(170, 50, 234); }
-  83%  { background-color: rgb(214, 90, 255); }
-  100% { background-color: rgb(170, 50, 234); }
+  0%   { background-color: rgb(86, 17, 123); }
+  16%  { background-color: rgb(43, 6, 63); }
+  33%  { background-color: rgb(86, 17, 123); }
+  50%  { background-color: rgb(43, 6, 63); }
+  66%  { background-color: rgb(86, 17, 123); }
+  83%  { background-color: rgb(43, 6, 63); }
+  100% { background-color: rgb(86, 17, 123); }
 }
 @keyframes rainbow-text {
-  0%   { color: rgb(86, 17, 123); }
-  16%  { color: rgb(214, 90, 255); }
-  33%  { color: rgb(86, 17, 123); }
-  50%  { color: rgb(214, 90, 255); }
-  66%  { color: rgb(86, 17, 123); }
-  83%  { color: rgb(214, 90, 255); }
-  100% { color: rgb(86, 17, 123); }
+  0%   { color: rgb(43, 6, 63); }
+  16%  { color: rgb(86, 17, 123); }
+  33%  { color: rgb(43, 6, 63); }
+  50%  { color: rgb(86, 17, 123); }
+  66%  { color: rgb(43, 6, 63); }
+  83%  { color: rgb(86, 17, 123); }
+  100% { color: rgb(43, 6, 63); }
 }
 @keyframes text-colore {
-  0%   { color: rgb(0, 0, 0); }
-  16%  { color: rgb(63, 63, 63); }
-  33%  { color: rgb(0, 0, 0); }
-  50%  { color: rgb(63, 63, 63); }
-  66%  { color: rgb(0, 0, 0); }
-  83%  { color: rgb(63, 63, 63); }
-  100% { color: rgb(0, 0, 0); }
+  0%   { color: rgb(255, 255, 255); }
+  16%  { color: rgb(255, 255, 255); }
+  33%  { color: rgb(255, 255, 255); }
+  50%  { color: rgb(255, 255, 255); }
+  66%  { color: rgb(255, 255, 255); }
+  83%  { color: rgb(255, 255, 255); }
+  100% { color: rgb(255, 255, 255); }
 }
 
 .metaverse-section img { width: 100%; max-width: 400px; border-radius: 12px; margin-top: 20px; display: block; margin-left: auto; margin-right: auto; }
@@ -260,14 +260,14 @@ body {
     color: #ffffff;
     border: radius 8px;
   }
-  @keyframes rainbow {
-  0%   { background-color: rgb(170, 50, 234); }
-  16%  { background-color: rgb(214, 90, 255); }
-  33%  { background-color: rgb(170, 50, 234); }
-  50%  { background-color: rgb(214, 90, 255); }
-  66%  { background-color: rgb(170, 50, 234); }
-  83%  { background-color: rgb(214, 90, 255); }
-  100% { background-color: rgb(170, 50, 234); }
+@keyframes rainbow {
+  0%   { background-color: rgb(86, 17, 123); }
+  16%  { background-color: rgb(43, 6, 63); }
+  33%  { background-color: rgb(86, 17, 123); }
+  50%  { background-color: rgb(43, 6, 63); }
+  66%  { background-color: rgb(86, 17, 123); }
+  83%  { background-color: rgb(43, 6, 63); }
+  100% { background-color: rgb(86, 17, 123); }
 }
   .ceo-img { width: 100%; max-width: 400px; border-radius: 12px; margin-top: 20px; margin-left: 0px; }
 
@@ -332,7 +332,7 @@ body {
       <h1 class="hero-subtitle">and get exclusive beta access to the Metaverse.</h1>
       <h2 class="hero-subtitle">All accessories included.</h2>
       <h3 class="hero-subtitle">Enter now and be among the first to explore Otherworld.</h3>
-      <button class="join-button" onclick="openJoin()">Join The Contest</button>
+      <button class="join-button" onclick="openJoin()">Join The Content</button>
       <div class="video-container">
         <video class="promo-video" controls autoplay muted loop>
           <source src="short.mp4" type="video/mp4">
